# ugl_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Bezier.msg  BezierSequence.msg  BezierSequenceStamped.msg  BezierStamped.msg  SlerpSegment.msg  SlerpSegmentStamped.msg  SlerpSequence.msg  SlerpSequenceStamped.msg  Trajectory.msg
