<?xml version="1.0"?>
<package format="2">
  <name>ugl_msgs</name>
  <version>0.0.1</version>
  <description>The ugl_msgs package</description>
  <license>BSD</license>

  <maintainer email="karl.viktor.kull@gmail.com">Viktor Kull</maintainer>
  <author email="karl.viktor.kull@gmail.com">Viktor Kull</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
